# gridmen

./: .gitmodules  package-lock.json
client/: README.md  package-lock.json  package.json
client/electron/: main.ts
client/src/: .prettierrc  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
client/src/src/: App.css  App.tsx  main.tsx  renderer.d.ts
client/src/src/components/: framework.tsx  iconBar.tsx  resourcePage.tsx  resourceTree.tsx  tabBar.tsx  viewBar.tsx
client/src/src/registry/: iconRegistry.ts  resourceRegistry.ts  templateRegistry.ts  viewRegistry.ts
client/src/src/resource/: iconRegistry.ts  viewRegistry.tsx
client/src/src/store/: storeSet.ts  storeTypes.ts
client/src/src/template/: default.ts  iTemplate.tsx  itemplate.ts
client/src/src/utils/: utils.ts
client/src/src/views/: IViewContext.ts
server/: .gitignore  main.py  noodle.config.yaml  noodle.db  pyproject.toml
server/crms/: grid.py  patch.py  proj.py  schema.py  vector.py
server/crms/names/: hooks.py
server/crms/patch/: __init__.py  hooks.py  patch.py
server/crms/proj/: proj.py
server/crms/schema/: __init__.py  hooks.py  schema.py
server/icrms/: igrid.py  ipatch.py  iproj.py  ischema.py  ivector.py
server/py-noodle/: noodle.co.yaml  noodle.config.yaml
server/py-noodle/tests/: local.py  local_schema.py  remote.py  remote_schema.py
server/py-noodle/tests/crms/schema/: __init__.py  hooks.py  schema.py
server/src/gridmen_backend/: main.py
server/src/gridmen_backend/api/: __init__.py
server/src/gridmen_backend/api/endpoints/: __init__.py  grid.py  patch.py  proj.py  schema.py  vector.py
server/src/gridmen_backend/core/: config.py
server/src/gridmen_backend/schemas/: __init__.py  base.py  grid.py  node.py  patch.py  schema.py  vector.py
server/src/nh_grid_server/: main.py
server/src/nh_grid_server/api/: __init__.py
server/src/nh_grid_server/api/endpoints/: __init__.py  proj.py  schema.py
server/src/nh_grid_server/core/: bootstrapping_treeger.py
server/src/nh_grid_server/schemas/: __init__.py  project.py  schema.py
server/templates/feature/: hooks.py
server/templates/grid/: __init__.py  assembly.py  hooks.py  vector.py
server/templates/patch/: __init__.py  hooks.py
server/templates/schema/: __init__.py  hooks.py
server/templates/vector/: __init__.py  hooks.py
src/: package-lock.json
src/framework/: vite.config.ts
src/src/components/functionPage/: createPage.tsx
src/src/components/iconBar/: iconBar.tsx
src/src/components/mapContainer/: mapContainer.tsx  snapRectangleMode.ts  utils.ts
src/src/components/resourceScene/: sceneComponent.tsx
src/src/resource/: scenarioRegistry.tsx
src/src/types/: mapbox-gl-draw-snap-mode.d.ts  mapbox-gl-draw.d.ts
(+209 files in other folders)
