[project]
name = "nh-grid-server"
version = "0.1.0"
description = "NH Grid Server with Go-based resource management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "c-two>=0.2.6",
    "pyproj>=3.7.1",
    "pyyaml>=6.0.3",
    "py-noodle",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
c-two = { git = "https://github.com/world-in-progress/c-two.git", branch = "main" }
py-noodle = { path = "py-noodle", editable = true }

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"
