[project]
name = "gridmen-backend"
version = "0.1.0"
description = "The Gridmen Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "c-two>=0.2.6",
    "pyproj>=3.7.1",
    "pyyaml>=6.0.3",
    "py-noodle",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "gdal==3.12.0.post1 ; sys_platform == 'darwin'",
    "gdal ; sys_platform != 'darwin'",
    "rasterio>=1.4.4",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
c-two = { git = "https://github.com/world-in-progress/c-two.git", branch = "main" }
py-noodle = { path = "py-noodle", editable = true }
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]

[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

